--- a/chromeExtension/popup.html
+++ b/chromeExtension/popup.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-    <script src="script.js"></script>
-</body>
+<html>
+  <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <form>
+        <div class="mb-3">
+          <label for="api-key" class="form-label">API Key</label>
+          <input type="text" class="form-control" id="apikey" aria-describedby="api-key">
+          <div id="key-text" class="form-text">Insert API Key for openAI.</div>
+            
+          <button id="submit-button" type="submit" class="btn btn-primary">Submit</button>
+        </div>
+        <div>
+            <!-- <style></style> -->
+            <button id="simple-button" type="submit" class="btn btn-primary">Simple Hint</button>
+            <button id="medium-button" type="submit" class="btn btn-primary">Medium Hint</button>
+            <button id="full-button" type="submit" class="btn btn-primary">Full Hint</button>
+            <!-- change sizing of buttons-->
+        </div>
+      </form>
+    <script src="popup.js"></script>
+  </body>
 </html>
